--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,6 +17,7 @@
     "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.9",
     "react": "^17.0.0 || ^18.0.0",
+    "react-date-range": "^2.0.1",
     "react-dom": "^17.0.0 || ^18.0.0"
   },
   "devDependencies": {
